Bug 14762 - TDB 1.4.4 tdb.h has invalid syntax
Summary: TDB 1.4.4 tdb.h has invalid syntax
Status: RESOLVED FIXED
Alias: None
Product: TDB
Classification: Unclassified
Component: libtdb (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal
Target Milestone: ---
Assignee: Guenther Deschner
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-16 15:27 UTC by Guenther Deschner
Modified: 2022-12-08 00:09 UTC (History)
2 users (show)

See Also:


Attachments
patch from master for v4-15 (1.38 KB, patch)
2021-10-06 09:18 UTC, Guenther Deschner
gd: review? (metze)
abartlet: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Guenther Deschner 2021-07-16 15:27:45 UTC
The lastest tdb release uses _PUBLIC_ in its main header file so one cannot compile with unless _PUBLIC_ gets defined elsewhere.

See https://bugzilla.redhat.com/show_bug.cgi?id=1983011 for further details.
Comment 1 Samba QA Contact 2021-07-20 11:49:03 UTC
This bug was referenced in samba master:

aacd3ecb45ab04cb2f8a38a385a45bdca6d88cd2
Comment 2 Guenther Deschner 2021-10-06 09:18:44 UTC
Created attachment 16838 [details]
patch from master for v4-15
Comment 3 Andrew Bartlett 2021-10-06 22:03:54 UTC
Thanks.  Assigning to Jule for 4.15.next.
Comment 4 Stefan Metzmacher 2021-10-07 15:38:05 UTC
Why do we need this in 4.15?
Comment 5 Stefan Metzmacher 2021-10-08 08:17:59 UTC
(In reply to Stefan Metzmacher from comment #4)

The problem is fixed in tdb-1.4.5...
Comment 6 Martin Schwenke 2021-11-22 06:50:10 UTC
I am also hitting this.  We're trying to build sssd against 4.15.x.

I am hoping to install TDB from a git checkout of 4.15.x and have sssd link against it.  That might not be the most clearly supported way of doing it, but it sure is convenient.  Otherwise I need to figure out which version of TDB is required by 4.15.x, check that out, build, install, ...  If 4.15.x is consistent and has an externally consumable version of tdb.h then life is much easier.

I would like to see this fix in 4.15...  please?  :-)
Comment 7 Guenther Deschner 2021-11-23 19:10:32 UTC
Metze, there you have an explanation :-)
Comment 8 Stefan Metzmacher 2021-11-25 22:04:06 UTC
(In reply to Guenther Deschner from comment #7)

I don't agree, but if we backport we need to backport everything,
also the version bump to tdb-1.4.5.
Comment 9 Björn Jacke 2022-10-06 03:29:16 UTC
Closing as fixed, 4.15 is in security fix only mode.
Comment 10 Björn Jacke 2022-12-08 00:09:55 UTC
Closing as fixed, 4.15 is in security fix only mode.